--- a/cdn/downloads/emotes/index.html
+++ b/cdn/downloads/emotes/index.html
@@ -6,7 +6,7 @@
     <title>Directory Contents</title>
 
     <!-- Discord Embed -->
-    <meta property="og:title" content="Mercy Chibi Emotes" />
+    <meta property="og:title" content="Chibi Emotes" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://cdn.lynnux.xyz/downloads" />
     <meta name="theme-color" content="#91484F">
