--- a/cdn/404.html
+++ b/cdn/404.html
@@ -13,7 +13,7 @@
         <h4 style="background-color: transparent;">
             The page you're looking for can't be found.
         </h4>
-        <button onclick="window.location.href='https://lynnux.xyz';" class="Notfound_not-found-button__M59dr">Home</button>
+        <button onclick="window.location.href='https://cdn.lynnux.xyz';" class="Notfound_not-found-button__M59dr">Home</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js "></script>
 </body>
