--- a/cdn/downloads/index.html
+++ b/cdn/downloads/index.html
@@ -25,10 +25,10 @@
             </thead>
             <tbody>
                 <tr class='directory'>
-                    <td><a href='https://lynnux.xyz/' class='name'>...</a></td>
-                    <td><a href='https://lynnux.xyz/'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='1'><a href='https://lynnux.xyz/'>N/A</a></td>
-                    <td sorttable_customkey='1'><a href='https://lynnux.xyz/'>N/A</a></td>
+                    <td><a href='https://cdn.lynnux.xyz/' class='name'>...</a></td>
+                    <td><a href='https://cdn.lynnux.xyz/'>&lt;GO BACK&gt;</a></td>
+                    <td sorttable_customkey='1'><a href='https://cdn.lynnux.xyz/'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='https://cdn.lynnux.xyz/'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./emotes/' class='name'>emotes</a></td>
