--- a/cdn/Overwatch/index.html
+++ b/cdn/Overwatch/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./.favicon.ico">
+    <link rel="shortcut icon" href="/images/Overwatch_circle_logo.svg.png">
     <title>Directory Contents</title>
 
     <!-- Discord Embed --> 
