--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Bye/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Bye/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="container">
-        <h1>/Voicelines/assistanceRequired/</h1>
+        <h1>/Voicelines/Bye/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -31,18 +31,23 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./I need assistance.ogg' class='name'>I need assistance.ogg</a></td>
-                    <td><a href='./I need assistance.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='15'><a href='./I need assistance.ogg'>15 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./I need assistance.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./(Quechua)_ Goodbye.ogg' class='name'>(Quechua)_ Goodbye.ogg</a></td>
+                    <td><a href='./(Quechua)_ Goodbye.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='16'><a href='./(Quechua)_ Goodbye.ogg'>16 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./(Quechua)_ Goodbye.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Need help.ogg' class='name'>Need help.ogg</a></td>
-                    <td><a href='./Need help.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='11'><a href='./Need help.ogg'>11 KB</a></td>
-                    <td sorttable_customkey='1692878600'><a href='./Need help.ogg'>Aug 24 2023 2:03 PM</a></td>
+                    <td><a href='./(Spanish)_ Goodbye.ogg' class='name'>(Spanish)_ Goodbye.ogg</a></td>
+                    <td><a href='./(Spanish)_ Goodbye.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='8'><a href='./(Spanish)_ Goodbye.ogg'>8 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./(Spanish)_ Goodbye.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
-
+                <tr class='file'>
+                    <td><a href='./Goodbye.ogg' class='name'>Goodbye.ogg</a></td>
+                    <td><a href='./Goodbye.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='9'><a href='./Goodbye.ogg'>9 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Goodbye.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
