--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/ClearArea/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/ClearArea/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="container">
-        <h1>/Voicelines/assistanceRequired/</h1>
+        <h1>/Voicelines/ClearArea/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -31,18 +31,17 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./I need assistance.ogg' class='name'>I need assistance.ogg</a></td>
-                    <td><a href='./I need assistance.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='15'><a href='./I need assistance.ogg'>15 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./I need assistance.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./Clear the area!.ogg' class='name'>Clear the area!.ogg</a></td>
+                    <td><a href='./Clear the area!.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='14'><a href='./Clear the area!.ogg'>14 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Clear the area!.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Need help.ogg' class='name'>Need help.ogg</a></td>
-                    <td><a href='./Need help.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='11'><a href='./Need help.ogg'>11 KB</a></td>
-                    <td sorttable_customkey='1692878600'><a href='./Need help.ogg'>Aug 24 2023 2:03 PM</a></td>
+                    <td><a href='./We have to clear the area.ogg' class='name'>We have to clear the area.ogg</a></td>
+                    <td><a href='./We have to clear the area.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='14'><a href='./We have to clear the area.ogg'>19 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./We have to clear the area.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
-
             </tbody>
         </table>
     </div>
