--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/EnemyResurrect/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/EnemyResurrect/index.html
@@ -13,7 +13,7 @@
  
 <body>
     <div id="container">
-        <h1>/Voicelines/BehindYou/</h1>
+        <h1>/Voicelines/EnemyResurrect/</h1>
         <table class="sortable">
             <thead>
                 <tr> 
@@ -31,10 +31,16 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Behind you!.ogg' class='name'>Behind you!.ogg</a></td>
-                    <td><a href='./Behind you!.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='11'><a href='./Behind you!.ogg'>11 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./Behind you!.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./They%27re coming back to life!.ogg' class='name'>They're coming back to life!.ogg</a></td>
+                    <td><a href='./They%27re coming back to life!.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='18'><a href='./They%27re coming back to life!.ogg'>18 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./They%27re coming back to life!.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Why won%27t they stay down_.ogg' class='name'>Why won't they stay down_.ogg</a></td>
+                    <td><a href='./Why won%27t they stay down_.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='17'><a href='./Why won%27t they stay down_.ogg'>17 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Why won%27t they stay down_.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
             </tbody>
         </table>
