--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/EnemySniper/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/EnemySniper/index.html
@@ -13,7 +13,7 @@
  
 <body>
     <div id="container">
-        <h1>/Voicelines/BehindYou/</h1>
+        <h1>/Voicelines/EnemySniper/</h1>
         <table class="sortable">
             <thead>
                 <tr> 
@@ -31,10 +31,10 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Behind you!.ogg' class='name'>Behind you!.ogg</a></td>
-                    <td><a href='./Behind you!.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='11'><a href='./Behind you!.ogg'>11 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./Behind you!.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./Enemy sniper!.ogg' class='name'>Enemy sniper!.ogg</a></td>
+                    <td><a href='./Enemy sniper!.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='12'><a href='./Enemy sniper!.ogg'>12 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Enemy sniper!.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
             </tbody>
         </table>
