--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Health/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Health/index.html
@@ -31,10 +31,22 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Go.ogg' class='name'>Go.ogg</a></td>
-                    <td><a href='./Go.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='7'><a href='./Go.ogg'>7 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./Go.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./LowHealthBreath/' class='name'>LowHealthBreath</a></td>
+                    <td><a href='./LowHealthBreath/'>&lt;DIRECTORY&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./LowHealthBreath/'>N/A</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./LowHealthBreath/'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./LowHealthBreathEnd/' class='name'>LowHealthBreathEnd</a></td>
+                    <td><a href='./LowHealthBreathEnd/'>&lt;DIRECTORY&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./LowHealthBreathEnd/'>N/A</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./LowHealthBreathEnd/'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./LowHealthBreathStart/' class='name'>LowHealthBreathStart</a></td>
+                    <td><a href='./LowHealthBreathStart/'>&lt;DIRECTORY&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./LowHealthBreathStart/'>N/A</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./LowHealthBreathStart/'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
             </tbody>
         </table>
