--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Healing/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Healing/index.html
@@ -13,7 +13,7 @@
  
 <body>
     <div id="container">
-        <h1>/Voicelines/GetInThere/</h1> 
+        <h1>/Voicelines/Healing/</h1> 
         <table class="sortable">
             <thead>
                 <tr> 
@@ -31,10 +31,16 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Go.ogg' class='name'>Go.ogg</a></td>
-                    <td><a href='./Go.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='7'><a href='./Go.ogg'>7 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./Go.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./Can someone heal me_.ogg' class='name'>Can someone heal me_.ogg</a></td>
+                    <td><a href='./Can someone heal me_.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='12'><a href='./Can someone heal me_.ogg'>12 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Can someone heal me_.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./I need healing.ogg' class='name'>I need healing.ogg</a></td>
+                    <td><a href='./I need healing.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='11'><a href='./I need healing.ogg'>11 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./I need healing.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
             </tbody>
         </table>
