--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Hello/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Hello/index.html
@@ -13,7 +13,7 @@
  
 <body>
     <div id="container">
-        <h1>/Voicelines/GetInThere/</h1> 
+        <h1>/Voicelines/Hello/</h1> 
         <table class="sortable">
             <thead>
                 <tr> 
@@ -31,10 +31,22 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Go.ogg' class='name'>Go.ogg</a></td>
-                    <td><a href='./Go.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='7'><a href='./Go.ogg'>7 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./Go.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./Hello.ogg' class='name'>Hello.ogg</a></td>
+                    <td><a href='./Hello.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='8'><a href='./Hello.ogg'>8 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Hello.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./(Spanish)_ Hello.ogg' class='name'>(Spanish)_ Hello.ogg</a></td>
+                    <td><a href='./(Spanish)_ Hello.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='8'><a href='./(Spanish)_ Hello.ogg'>8 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./(Spanish)_ Hello.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./(Quechua)_ Hello.ogg' class='name'>(Quechua)_ Hello.ogg</a></td>
+                    <td><a href='./(Quechua)_ Hello.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='13'><a href='./(Quechua)_ Hello.ogg'>13 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./(Quechua)_ Hello.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
             </tbody>
         </table>
