--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/ImDefending/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/ImDefending/index.html
@@ -31,10 +31,16 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Go.ogg' class='name'>Go.ogg</a></td>
-                    <td><a href='./Go.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='7'><a href='./Go.ogg'>7 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./Go.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./Defend with me.ogg' class='name'>Defend with me.ogg</a></td>
+                    <td><a href='./Defend with me.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='14'><a href='./Defend with me.ogg'>14 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Defend with me.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Defending.ogg' class='name'>Defending.ogg</a></td>
+                    <td><a href='./Defending.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='11'><a href='./Defending.ogg'>11 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Defending.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
             </tbody>
         </table>
