--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/ImReady/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/ImReady/index.html
@@ -31,10 +31,16 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Go.ogg' class='name'>Go.ogg</a></td>
-                    <td><a href='./Go.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='7'><a href='./Go.ogg'>7 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./Go.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./I%27m ready.ogg' class='name'>I'm ready.ogg</a></td>
+                    <td><a href='./I%27m ready.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='9'><a href='./I%27m ready.ogg'>9 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./I%27m ready.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Ready.ogg' class='name'>Ready.ogg</a></td>
+                    <td><a href='./Ready.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='8'><a href='./Ready.ogg'>8 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Ready.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
             </tbody>
         </table>
