--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Objective/Attack/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Objective/Attack/index.html
@@ -13,7 +13,7 @@
  
 <body>
     <div id="container">
-        <h1>/Voicelines/KnockDown/</h1> 
+        <h1>/objective/Attack/</h1> 
         <table class="sortable">
             <thead>
                 <tr> 
@@ -31,22 +31,16 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./000000066EE4.0B2.ogg' class='name'>000000066EE4.0B2.ogg</a></td>
-                    <td><a href='./000000066EE4.0B2.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='10'><a href='./000000066EE4.0B2.ogg'>10 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./000000066EE4.0B2.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./Attack the objective!.ogg' class='name'>Attack the objective!.ogg</a></td>
+                    <td><a href='./Attack the objective!.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='14'><a href='./Attack the objective!.ogg'>14 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Attack the objective!.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./000000066EE6.0B2.ogg' class='name'>000000066EE6.0B2.ogg</a></td>
-                    <td><a href='./000000066EE6.0B2.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='10'><a href='./000000066EE6.0B2.ogg'>10 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./000000066EE6.0B2.ogg'>Aug 27 2023 2:27 PM</a></td>
-                </tr>
-                <tr class='file'>
-                    <td><a href='./000000066EE7.0B2.ogg' class='name'>000000066EE7.0B2.ogg</a></td>
-                    <td><a href='./000000066EE7.0B2.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='10'><a href='./000000066EE7.0B2.ogg'>10 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./000000066EE7.0B2.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./Focus on the objective!.ogg' class='name'>Focus on the objective!.ogg</a></td>
+                    <td><a href='./Focus on the objective!.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='16'><a href='./Focus on the objective!.ogg'>16 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Focus on the objective!.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
             </tbody>
         </table>
