--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Unknown/HealingTeammates/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Voicelines/Unknown/HealingTeammates/index.html
@@ -78,6 +78,78 @@
                     <td sorttable_customkey='20'><a href='./I%27ve been to enough funerals.ogg'>20 KB</a></td>
                     <td sorttable_customkey='1693139238'><a href='./I%27ve been to enough funerals.ogg'>Aug 27 2023 2:27 PM</a></td>
                 </tr>
+                <tr class='file'>
+                    <td><a href='./Adding this to my list of regrets.ogg' class='name'>Adding this to my list of regrets.ogg</a></td>
+                    <td><a href='./Adding this to my list of regrets.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='20'><a href='./Adding this to my list of regrets.ogg'>20 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Adding this to my list of regrets.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./(Spanish) Stay in range so I can heal you.ogg' class='name'>(Spanish) Stay in range so I can heal you.ogg</a></td>
+                    <td><a href='./(Spanish) Stay in range so I can heal you.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='23'><a href='./(Spanish) Stay in range so I can heal you.ogg'>23 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./(Spanish) Stay in range so I can heal you.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./(Spanish) Show me where it hurts.ogg' class='name'>(Spanish) Show me where it hurts.ogg</a></td>
+                    <td><a href='./(Spanish) Show me where it hurts.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='17'><a href='./(Spanish) Show me where it hurts.ogg'>17 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./(Spanish) Show me where it hurts.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Keep it together.ogg' class='name'>Keep it together.ogg</a></td>
+                    <td><a href='./Keep it together.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='13'><a href='./Keep it together.ogg'>13 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Keep it together.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Working on your injuries. Keep close.ogg' class='name'>Working on your injuries. Keep close.ogg</a></td>
+                    <td><a href='./Working on your injuries. Keep close.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='21'><a href='./Working on your injuries. Keep close.ogg'>21 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Working on your injuries. Keep close.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Stop pushing yourself so hard.ogg' class='name'>Stop pushing yourself so hard.ogg</a></td>
+                    <td><a href='./Stop pushing yourself so hard.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='18'><a href='./Stop pushing yourself so hard.ogg'>18 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Stop pushing yourself so hard.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Stay close. I%27m trying to help.ogg' class='name'>Stay close. I'm trying to help.ogg</a></td>
+                    <td><a href='./Stay close. I%27m trying to help.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='20'><a href='./Stay close. I%27m trying to help.ogg'>20 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Stay close. I%27m trying to help.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Stay in range if you want my help.ogg' class='name'>Stay in range if you want my help.ogg</a></td>
+                    <td><a href='./Stay in range if you want my help.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='20'><a href='./Stay in range if you want my help.ogg'>20 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Stay in range if you want my help.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Stay in range if you want my help.ogg' class='name'>Stay in range if you want my help.ogg</a></td>
+                    <td><a href='./Stay in range if you want my help.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='20'><a href='./Stay in range if you want my help.ogg'>20 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./Stay in range if you want my help.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./You$%27re hurt. Let me see.ogg' class='name'>You're hurt. Let me see.ogg</a></td>
+                    <td><a href='./You$%27re hurt. Let me see.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='14'><a href='./You$%27re hurt. Let me see.ogg'>14 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./You$%27re hurt. Let me see.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./You$%27re in no condition to fight.ogg' class='name'>You're in no condition to fight.ogg</a></td>
+                    <td><a href='./You$%27re in no condition to fight.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='20'><a href='./You$%27re in no condition to fight.ogg'>20 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./You$%27re in no condition to fight.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./I am not going to watch you die.ogg' class='name'>I am not going to watch you die.ogg</a></td>
+                    <td><a href='./I am not going to watch you die.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='22'><a href='./I am not going to watch you die.ogg'>22 KB</a></td>
+                    <td sorttable_customkey='1693139238'><a href='./I am not going to watch you die.ogg'>Aug 27 2023 2:27 PM</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
